2002-02-21  Richard Williamson  <rjw@apple.com>

    Stop mostly working.
    
	* src/kwq/KWQKjobclasses.mm:
	* src/kwq/KWQKloader.mm: (-[URLLoadClient
	WCURLHandleResourceDidCancelLoading:userData:]), (-[URLLoadClient
	WCURLHandleResourceDidFinishLoading:userData:]), (-[URLLoadClient
	WCURLHandle:resourceDidFailLoadingWithResult:userData:]),
	(Loader::servePendingRequests):
	* src/kwq/kio/jobclasses.h:

2002-02-21  Maciej Stachowiak  <mjs@apple.com>

	* src/kwq/KWQString.mm: (QString::fromCFString): Don't pass a
	length to CFStringCreateMutableCopy, since that makes the string
	fixed-length, which makes assertions fail when in debugging mode.

2002-02-20  Richard Williamson  <rjw@apple.com>

    Some groundwork to bring WebFoundation callbacks up to 
    WebKit.
    
	* src/kdelibs/khtml/misc/loader.h:
	* src/kwq/KWQKHTMLPart.mm: (-[KHTMLPartLoadClient
	WCURLHandleResourceDidBeginLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandleResourceDidCancelLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandleResourceDidFinishLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandle:resourceDataDidBecomeAvailable:userData:]), (-[KHTMLPartLoadClient
	WCURLHandle:resourceDidFailLoadingWithResult:userData:]), (KHTMLPart::openURL),
	(KHTMLPart::closeURL), (KHTMLPart::write), (KHTMLPart::checkCompleted):
	* src/kwq/KWQKloader.mm: (CachedCSSStyleSheet::CachedCSSStyleSheet),
	(CachedScript::CachedScript), (CachedImage::CachedImage), (-[URLLoadClient
	initWithLoader:dataSource:]), (-[URLLoadClient
	WCURLHandleResourceDidBeginLoading:userData:]), (-[URLLoadClient
	WCURLHandleResourceDidCancelLoading:userData:]), (-[URLLoadClient
	WCURLHandleResourceDidFinishLoading:userData:]), (-[URLLoadClient
	WCURLHandle:resourceDataDidBecomeAvailable:userData:]), (-[URLLoadClient
	WCURLHandle:resourceDidFailLoadingWithResult:userData:]), (Loader::load),
	(Loader::servePendingRequests), (Cache::requestImage),
	(Cache::requestStyleSheet), (Cache::requestScript):
	* src/kwq/kio/jobclasses.h:
